--- a/blockset/Cargo.toml
+++ b/blockset/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "blockset"
+description = "Data Block Set"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0-or-later"
+authors = ["Sergey Shandar"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
