--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,3 @@
 [alias]
 t = "test --release"
-c = "tarpaulin --out Html --release --lib --fail-under 100"
+c = "tarpaulin --out html --release --lib --fail-under 100"
