--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,13 +10,35 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  fmt:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - run: cargo fmt -- --check
+
+  clippy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - run: cargo clippy -- -D warnings      
+
+  test:
+    strategy:
+      matrix:
+        # https://docs.github.com/en/actions/using-jobs/choosing-the-runner-for-a-job#choosing-github-hosted-runners
+        os: [windows-latest, ubuntu-latest, macos-13]
+    runs-on: ${{ matrix.os }}    
+    steps:
+    - uses: actions/checkout@v3
+    - run: cargo t
+
+  coverage:
+    runs-on: macos-13
+    steps:
+    - uses: actions/checkout@v3
+    - run: cargo install cargo-tarpaulin
+    - run: cargo c
+    - uses: actions/upload-artifact@v3
+      with:
+        path: tarpaulin-report.html
+      if: always()
