--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: cargo install cargo-quickinstall
-    - run: cargo quickinstall --dry-run cargo-tarpaulin
+    - run: cargo quickinstall cargo-tarpaulin
     - run: cargo c
     - uses: actions/upload-artifact@v3
       with:
