--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,7 +30,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
-    - run: cargo t
+    - run: cargo test
+    - run: cargo test --release
 
   coverage:
     runs-on: macos-13
