--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,6 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: rustup target add wasm32-unknown-unknown
       - run: cargo build --target wasm32-unknown-unknown ${{ matrix.type }}
 
   test:
