--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,16 @@ jobs:
     - uses: actions/checkout@v3
     - run: cargo clippy -- -D warnings
 
+  build-wasm:
+    strategy:
+      matrix:
+        type: ['', '--release']
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - run: rustup target add wasm32-unknown-unknown
+      - run: cargo build --target wasm32-unknown-unknown ${{ matrix.type }}
+
   test:
     strategy:
       matrix:
