--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,15 +22,13 @@ jobs:
     - uses: actions/checkout@v3
     - run: cargo clippy -- -D warnings
 
-  build-wasm:
-    strategy:
-      matrix:
-        type: ['', '--release']
+  test-wasm:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: rustup target add wasm32-unknown-unknown
-      - run: cargo build --target wasm32-unknown-unknown ${{ matrix.type }}
+      - run: cargo install wasm-pack
+      - run: wasm-pack test --node --release ./blockset
 
   test:
     strategy:
