--- a/blockset/Cargo.toml
+++ b/blockset/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 license = "GPL-3.0-or-later"
 authors = ["Sergey Shandar"]
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
