--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,14 @@
-[workspace]
-resolver = "2"
-members = ["blockset"]
+[package]
+name = "blockset"
+description = "Data Block Set"
+version = "0.2.3"
+edition = "2021"
+license = "GPL-3.0-or-later"
+authors = ["Sergey Shandar"]
 
-[workspace.dependencies]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+
+[dev-dependencies]
 wasm-bindgen-test = "0.3.37"
