--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ authors = ["Sergey Shandar"]
 [dependencies]
 libc = "0.2.149"
 io-trait = "0.1.1"
+io-impl = "0.1.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.37"
