--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ authors = ["Sergey Shandar"]
 [dependencies]
 libc = "0.2.149"
 io-trait = "0.1.1"
-io-impl = "0.1.0"
+io-impl = "0.1.2"
 
 [dev-dependencies]
+io-test = "0.1.3"
 wasm-bindgen-test = "0.3.37"
