Move I/O to another repository (#112)
* win:ReadFile,ReadFileEx

* file flags

* windows

* another try

* read and write with non-blocking API

* test.txt

* fmt

* windows only

* operation

* Overlapped::default()

* posix

* but coverage fails

* fmt

* os

* family

* posix

* posix

* fmt

* 644

* common function

* no r

* Operation

* CStr

* Windows with OperationResult

* fmt

* async_io fpr posix

* real_async_io

* real_async_io with Windows

* with Posix

* unix

* fmt

* remove duplicate tests

* get_result

* cargo n

* io-trait

* io_impl

* no IO and Virtual IO

* async in io-trait

* Async

* fmt

* unix

* io_test 0.2.0

* cargo n

* remove libc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ authors = ["Sergey Shandar"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+io-trait = "0.1.4"
+io-impl = "0.1.5"
 
 [dev-dependencies]
+io-test = "0.2.0"
 wasm-bindgen-test = "0.3.37"
