--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,15 @@
-[package]
-name = "blockset"
-description = "Data Block Set"
+[workspace]
+members = ["blockset"]
+resolver = "2"
+
+[workspace.package]
 version = "0.3.3"
 edition = "2021"
 license = "GPL-3.0-or-later"
 authors = ["Sergey Shandar"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace.dependencies]
 io-trait = "0.3.0"
 io-impl = "0.3.1"
-
-[dev-dependencies]
 io-test = "0.3.0"
 wasm-bindgen-test = "0.3.37"
