--- a/blockset/Cargo.toml
+++ b/blockset/Cargo.toml
@@ -10,5 +10,5 @@ repository.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-blockset-lib = { path = "../blockset-lib", version = "0" }
+blockset-lib = { path = "../blockset-lib", version = "=0.3.5" }
 io-impl.workspace = true
