--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,8 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: cargo-bins/cargo-binstall@v1.4.4
-      - run: cargo binstall --no-confirm wasm-pack
+      - uses: taiki-e/install-action@wasm-pack
       - run: wasm-pack test --node --release ./blockset-lib
 
   test:
@@ -45,8 +44,7 @@ jobs:
     runs-on: macos-13
     steps:
     - uses: actions/checkout@v4
-    - uses: cargo-bins/cargo-binstall@v1.4.4
-    - run: cargo binstall --no-confirm cargo-tarpaulin
+    - uses: taiki-e/install-action@cargo-tarpaulin
     - run: cargo c
     - uses: actions/upload-artifact@v3
       with:
