--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,13 @@ jobs:
     - uses: actions/checkout@v4
     - run: cargo clippy -- -D warnings
 
+  run-wasmtime:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: taiki-e/install-action@wasmtime
+      - run: wasmtime ./target/wasm32-wasi/release/blockset.wasm
+
   test-wasm:
     runs-on: ubuntu-latest
     steps:
