--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,15 @@ jobs:
     - uses: actions/checkout@v4
     - run: cargo clippy -- -D warnings
 
+  run-wasmtime:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: taiki-e/install-action@wasmtime
+      - run: rustup target add wasm32-wasi
+      - run: cargo build --target wasm32-wasi --release
+      - run: wasmtime ./target/wasm32-wasi/release/blockset.wasm validate c02hb4h8s6v05pxpnhcyxdebewfbwbrg6sp3k46hsh6qc
+
   test-wasm:
     runs-on: ubuntu-latest
     steps:
