--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ io-trait = "0.8.0"
 io-impl = "0.8.1"
 io-test = "0.8.1"
 wasm-bindgen-test = "0.3.41"
-nanvm-lib = { git = "https://github.com/functionalscript/nanvm" }
+nanvm-lib = { git = "https://github.com/functionalscript/nanvm", branch = "for-blockset"}
