using NaNVM lib (#161)
* nanvm-lib

* remove array

* nanvm-lib = 0.0.1

* default

* codecov

* fmt

* assert

* unchecked_shr

* shl128

* shl

* app

* progress

* 99

* add

* 99.82%

* 100%

* clippy

* clippy

* 99.65%

* 98.24%

* 98.95%

* 100%

* assert

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ repository = "https://github.com/datablockset/blockset"
 io-trait = "0.8.0"
 io-impl = "0.8.1"
 io-test = "0.8.1"
-wasm-bindgen-test = "0.3.39"
+wasm-bindgen-test = "0.3.41"
+nanvm-lib = "0.0.1"
