--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,4 @@ io-trait = "0.9.0"
 io-impl = "0.9.0"
 io-test = "0.9.0"
 wasm-bindgen-test = "0.3.41"
-# nanvm-lib = "0.0.1"
-nanvm-lib = { git = "https://github.com/functionalscript/nanvm", branch = "to-json" }
+nanvm-lib = "0.0.2"
