--- a/blockset/Cargo.toml
+++ b/blockset/Cargo.toml
@@ -10,6 +10,5 @@ repository.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# we should always use a specific version of the blockset-lib
-blockset-lib = { path = "../blockset-lib", version = "=0.4.2" }
+blockset-lib.workspace = true
 io-impl.workspace = true
