--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ authors = ["Sergey Shandar"]
 repository = "https://github.com/datablockset/blockset"
 
 [workspace.dependencies]
-io-trait = "0.8.0"
-io-impl = "0.8.1"
-io-test = "0.8.1"
-wasm-bindgen-test = "0.3.41"
-nanvm-lib = "0.0.1"
+blockset-lib = { path = "blockset-lib", version = "0.4.2" }
+io-trait = "0.10.0"
+io-impl = "0.10.0"
+io-test = "0.10.0"
+wasm-bindgen-test = "0.3.42"
+nanvm-lib = "0.0.3"
