--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ io-trait = "0.10.0"
 io-impl = "0.10.0"
 io-test = "0.10.1"
 wasm-bindgen-test = "0.3.42"
-nanvm-lib = "0.0.3"
+# nanvm-lib = "0.0.3"
+nanvm-lib = { git = "https://github.com/functionalscript/nanvm", branch = "pub-parse" }
