--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,3 +2,4 @@
 t = "test --release"
 c = "tarpaulin --out html --release --lib --fail-under 100"
 n = "nextest run --release"
+l = "llvm-cov --html"
