Create block-types.md (#182)
* Create block-types.md

* Update block-types.md

* Update block-types.md

* push_keys

* cargo l

* coverage - 99%

* issues

* fmt and clippy

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,4 +1,5 @@
 [alias]
 t = "test --release"
-c = "tarpaulin --out html --release --lib --fail-under 100"
+c = "tarpaulin --out html --release --lib --fail-under 99"
 n = "nextest run --release"
+l = "llvm-cov --html"
